# cc-ghost

./: .env.example  .gitignore  CLAUDE.md  README.md  cc-ghost.py  cc_ghost.py  persona.example.md  pyproject.toml
